Band-aid collapse re-size bug. Adjusted CSS for 3 wide on lrg scrn

--- a/06-clayton-leach-todo-app/src/App.css
+++ b/06-clayton-leach-todo-app/src/App.css
@@ -253,7 +253,7 @@ Lists Section
     }
 }
 
-@media (min-width: 1301px) and (max-width: 1500px){
+@media (min-width: 1301px){
     .list-container{
         width: calc((100% / 3.0) - 1%);
         margin-right: 1%;
